<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_input">ActivityInput</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="camera_and_location_rationale">camera_and_location_rationale</string>
    <string name="returned_from_app_settings_to_activity">returned_from_app_settings_to_activity</string>
    <string name="rationale_ask_ok">OK</string>
    <string name="rationale_ask_cancel">Cancel</string>

    <string name="notification_title">Title</string>
    <string name="notification_message">This is notification message.This is notification message.This is notification message.</string>
    <string name="ticker_text">This is ticker text.</string>

    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>
    <string name="capture">capture</string>
    <string name="permission_tip_photo">Arize needs access to your camera so you can take pictures as your avatar.</string>
    <string name="common_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">gallery</string>
    <string name="pick_file">pick file</string>
</resources>