<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".picture.CamaraActivity">

    <Button
        android:id="@+id/btn_capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_file"
        android:textAllCaps="false" />

    <ImageView
        android:id="@+id/img_capture"
        android:layout_width="@dimen/dp_300"
        android:layout_height="@dimen/dp_300" />

    <Button
        android:id="@+id/btn_photo_util_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PhotuUtilActivity"
        android:textAllCaps="false" />
</LinearLayout>